--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -1,3 +1,5 @@
+@use "../../node_modules/bootstrap/scss/bootstrap";
+
 $primary: #e35c38;
 $secondary: #ffffff;
 $border-radius: 0.5rem; // arredonda botões
@@ -51,7 +53,6 @@ body {
 }
 
 
-
 .imagem-fundo{
     position: relative;
     background-image: url(https://images.unsplash.com/photo-1649068618811-9f3547ef98fc?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=870);
@@ -60,5 +61,3 @@ body {
     background-size: 100%;
     background-attachment: scroll;
 }
-
-@import "../../node_modules/bootstrap/scss/bootstrap";
