--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -23,6 +23,9 @@
   $navbar-dark-color: rgba(255, 255, 255, 0.9),
   $navbar-dark-hover-color: rgba(255, 255, 255, 1),
   $navbar-padding-y: 1rem,
+  $input-bg: #FFFDFA,
+  $input-border-color: #FFFDFA,
+  
 );
 
 // seu CSS adicional depois de importar o bootstrap
