--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -52,3 +52,15 @@ body {
   background-size: 100%;
   background-attachment: scroll;
 }
+
+.sidebar {
+  min-height: 100vh;
+  width: 280px;
+  a {
+    background-color: $primary !important;
+  }
+}
+
+main {
+  margin-left: 280px;
+}
