--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -56,11 +56,38 @@ body {
 .sidebar {
   min-height: 100vh;
   width: 280px;
-  a {
-    background-color: $primary !important;
-  }
 }
 
-main {
-  margin-left: 280px;
+.profile {
+  display: flex;
+  text-align:start ;
+  flex-direction: column;
+  padding: 10px;
+  margin: 20px;
+  width: 500px;
+  height: auto;
+  box-shadow: 4px 4px 4px 4px #e35c38;
+  border-radius: 15px;
+    gap: 8px;
+}
+
+.profile-container {
+  display: flex;
+  text-align:start ;
+  flex-direction: column;
+  padding: 5px;
+  margin: 20px;
+  width: 550px;
+  height: auto;
+  box-shadow: 4px 4px 4px 4px #e35c38;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+
+.profile h2 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-bottom: 2px solid #e35c38;
 }
