--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -4161,8 +4161,8 @@ textarea.form-control-lg {
   padding: var(--bs-card-cap-padding-y) var(--bs-card-cap-padding-x);
   margin-bottom: 0;
   color: var(--bs-card-cap-color);
-  background-color: var(--bs-body-bg);
-  border-bottom: 0;
+  background-color: var(--bs-card-cap-bg);
+  border-bottom: var(--bs-card-border-width) solid var(--bs-card-border-color);
 }
 .card-header:first-child {
   border-radius: var(--bs-card-inner-border-radius) var(--bs-card-inner-border-radius) 0 0;
@@ -11317,6 +11317,45 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   background-attachment: scroll;
+}
+
+.sidebar {
+  min-height: 100vh;
+  width: 280px;
+}
+
+.profile {
+  display: flex;
+  text-align: start;
+  flex-direction: column;
+  padding: 10px;
+  margin: 20px;
+  width: 500px;
+  height: auto;
+  box-shadow: 4px 4px 4px 4px #e35c38;
+  border-radius: 15px;
+  gap: 8px;
+}
+
+.profile-container {
+  display: flex;
+  text-align: start;
+  flex-direction: column;
+  padding: 5px;
+  margin: 20px;
+  width: 550px;
+  height: auto;
+  box-shadow: 4px 4px 4px 4px #e35c38;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+
+.profile h2 {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-bottom: 2px solid #e35c38;
 }
 
 /*# sourceMappingURL=style.css.map */
