--- a/Assets/scss/style.scss
+++ b/Assets/scss/style.scss
@@ -68,9 +68,10 @@ body {
   margin: 20px;
   width: 500px;
   height: auto;
-  box-shadow: 4px 4px 4px 4px #e35c38;
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.25);
   border-radius: 15px;
-    gap: 8px;
+  gap: 8px;
+
 }
 
 .profile-container {
@@ -81,9 +82,8 @@ body {
   margin: 20px;
   width: 550px;
   height: auto;
-  box-shadow: 4px 4px 4px 4px #e35c38;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.25);
+  border-radius: 15px;
 }
 
 .profile h2 {
