--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -11334,7 +11334,7 @@ body {
   margin: 20px;
   width: 500px;
   height: auto;
-  box-shadow: 4px 4px 4px 4px #e35c38;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
   gap: 8px;
 }
@@ -11347,9 +11347,8 @@ body {
   margin: 20px;
   width: 550px;
   height: auto;
-  box-shadow: 4px 4px 4px 4px #e35c38;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
 }
 
 .profile h2 {
